--- a/md檔/樣本檢驗/樣本檢驗.md
+++ b/md檔/樣本檢驗/樣本檢驗.md
@@ -18,7 +18,7 @@ str(data)
      $ hasSuit                       : int  0 1 0 1 0 1 1 0 1 0 ...
      $ timeToDressUp                 : int  45 35 15 5 5 5 25 15 25 15 ...
      $ cafePricePerWeek              : int  150 250 250 50 0 0 150 0 50 150 ...
-     $ mealPricePerDay               : Factor w/ 6 levels "150","250","350",..: 1 3 3 1 1 1 1 2 2 2 ...
+     $ mealPricePerDay               : int  150 350 350 150 150 150 150 250 250 250 ...
      $ hasCreditCard                 : int  1 1 1 0 0 1 0 0 1 0 ...
      $ hasAttendedBusinessCompetition: int  0 0 0 0 0 0 1 0 1 0 ...
      $ EnglishProficiency            : int  4 4 3 NA 3 5 2 3 2 5 ...
@@ -43,76 +43,101 @@ sample <- data
 
 
 ```R
-sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.5588, 0.4412)
+sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 2 × 3</caption>
+<caption>A data.frame: 2 × 5</caption>
 <thead>
-	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>1</td><td>95</td><td>0.5080214</td></tr>
-	<tr><td>2</td><td>92</td><td>0.4919786</td></tr>
+	<tr><td>1</td><td>95</td><td>0.5080214</td><td>0.5588</td><td>-0.0508</td></tr>
+	<tr><td>2</td><td>92</td><td>0.4919786</td><td>0.4412</td><td> 0.0508</td></tr>
 </tbody>
 </table>
 
 
+
+在性別分布上<br/>
+誤差約在五個百分點
 
 #### 此樣本學院分布
 
 
 ```R
-sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.1272, 
+0.0983 ,
+0.1086 ,
+0.0969 ,
+0.1261 ,
+0.1403 ,
+0.1315 ,
+0.0839 ,
+0.0528 ,
+0.0241 
+)
+sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 10 × 3</caption>
+<caption>A data.frame: 10 × 5</caption>
 <thead>
-	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td> 1</td><td>21</td><td>0.11229947</td></tr>
-	<tr><td> 2</td><td>19</td><td>0.10160428</td></tr>
-	<tr><td> 3</td><td>20</td><td>0.10695187</td></tr>
-	<tr><td> 4</td><td>23</td><td>0.12299465</td></tr>
-	<tr><td> 5</td><td>20</td><td>0.10695187</td></tr>
-	<tr><td> 6</td><td>22</td><td>0.11764706</td></tr>
-	<tr><td> 7</td><td>35</td><td>0.18716578</td></tr>
-	<tr><td> 9</td><td>17</td><td>0.09090909</td></tr>
-	<tr><td>10</td><td> 8</td><td>0.04278075</td></tr>
-	<tr><td>11</td><td> 2</td><td>0.01069519</td></tr>
+	<tr><td> 1</td><td>21</td><td>0.11229947</td><td>0.1272</td><td>-0.0149</td></tr>
+	<tr><td> 2</td><td>19</td><td>0.10160428</td><td>0.0983</td><td> 0.0033</td></tr>
+	<tr><td> 3</td><td>20</td><td>0.10695187</td><td>0.1086</td><td>-0.0016</td></tr>
+	<tr><td> 4</td><td>23</td><td>0.12299465</td><td>0.0969</td><td> 0.0261</td></tr>
+	<tr><td> 5</td><td>20</td><td>0.10695187</td><td>0.1261</td><td>-0.0191</td></tr>
+	<tr><td> 6</td><td>22</td><td>0.11764706</td><td>0.1403</td><td>-0.0227</td></tr>
+	<tr><td> 7</td><td>35</td><td>0.18716578</td><td>0.1315</td><td> 0.0557</td></tr>
+	<tr><td> 9</td><td>17</td><td>0.09090909</td><td>0.0839</td><td> 0.0070</td></tr>
+	<tr><td>10</td><td> 8</td><td>0.04278075</td><td>0.0528</td><td>-0.0100</td></tr>
+	<tr><td>11</td><td> 2</td><td>0.01069519</td><td>0.0241</td><td>-0.0134</td></tr>
 </tbody>
 </table>
 
 
+
+同樣，學院分布上，<br/>
+誤差最多也在約五個百分點
 
 #### 此樣本年級分布
 
 
 ```R
-sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.348899083,
+0.329633028,
+0.32146789)
+
+sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 3 × 3</caption>
+<caption>A data.frame: 3 × 5</caption>
 <thead>
-	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>2</td><td>63</td><td>0.3368984</td></tr>
-	<tr><td>3</td><td>70</td><td>0.3743316</td></tr>
-	<tr><td>4</td><td>54</td><td>0.2887701</td></tr>
+	<tr><td>2</td><td>63</td><td>0.3368984</td><td>0.3488991</td><td>-0.0120</td></tr>
+	<tr><td>3</td><td>70</td><td>0.3743316</td><td>0.3296330</td><td> 0.0447</td></tr>
+	<tr><td>4</td><td>54</td><td>0.2887701</td><td>0.3214679</td><td>-0.0327</td></tr>
 </tbody>
 </table>
 
 
+
+在年級分布上<br/>
+誤差不超過五個百分點
 
 ## 樣本一：台大管院大二～大四學生
 
@@ -125,67 +150,61 @@ sample <- data %>% filter(school == 7)
 
 
 ```R
-sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.454291696,
+0.545708304
+)
+sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))%>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 2 × 3</caption>
+<caption>A data.frame: 2 × 5</caption>
 <thead>
-	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>1</td><td>14</td><td>0.4</td></tr>
-	<tr><td>2</td><td>21</td><td>0.6</td></tr>
+	<tr><td>1</td><td>14</td><td>0.4</td><td>0.4542917</td><td>-0.0543</td></tr>
+	<tr><td>2</td><td>21</td><td>0.6</td><td>0.5457083</td><td> 0.0543</td></tr>
 </tbody>
 </table>
 
 
 
-#### 此樣本學院分布
-
-
-```R
-sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
-```
-
-
-<table>
-<caption>A tibble: 1 × 3</caption>
-<thead>
-	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
-</thead>
-<tbody>
-	<tr><td>7</td><td>35</td><td>1</td></tr>
-</tbody>
-</table>
-
-
+管院大二到大四學生在性別比上，<br/>
+誤差在五個百分點
 
 #### 此樣本年級分布
 
 
 ```R
-sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.339148639,
+0.337055129,
+0.323796232
+)
+sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))%>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 3 × 3</caption>
+<caption>A data.frame: 3 × 5</caption>
 <thead>
-	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>2</td><td>12</td><td>0.3428571</td></tr>
-	<tr><td>3</td><td>16</td><td>0.4571429</td></tr>
-	<tr><td>4</td><td> 7</td><td>0.2000000</td></tr>
+	<tr><td>2</td><td>12</td><td>0.3428571</td><td>0.3391486</td><td> 0.0037</td></tr>
+	<tr><td>3</td><td>16</td><td>0.4571429</td><td>0.3370551</td><td> 0.1201</td></tr>
+	<tr><td>4</td><td> 7</td><td>0.2000000</td><td>0.3237962</td><td>-0.1238</td></tr>
 </tbody>
 </table>
 
 
+
+在年級分布上，<br/>
+樣本與母體分布的差距是較大的(12%)<br/>
+因此在討論管院大二到大四學生時<br/>
+樣本呈現出來的結果可能無法準確的反應大三與大四的實際狀況
 
 ## 樣本二：台大非管院大二～大四學生
 
@@ -198,75 +217,101 @@ sample <- data %>% filter(school != 7)
 
 
 ```R
-sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.574627654,
+0.425372346
+)
+sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))%>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 2 × 3</caption>
+<caption>A data.frame: 2 × 5</caption>
 <thead>
-	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>1</td><td>81</td><td>0.5328947</td></tr>
-	<tr><td>2</td><td>71</td><td>0.4671053</td></tr>
+	<tr><td>1</td><td>81</td><td>0.5328947</td><td>0.5746277</td><td>-0.0417</td></tr>
+	<tr><td>2</td><td>71</td><td>0.4671053</td><td>0.4253723</td><td> 0.0417</td></tr>
 </tbody>
 </table>
 
 
+
+非管院大二到大四學生在性別分布不超過五個百分點
 
 #### 此樣本學院分布
 
 
 ```R
-sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.1464 ,
+0.1132 ,
+0.1251 ,
+0.1115 ,
+0.1452 ,
+0.1615 ,
+0.0967 ,
+0.0607 ,
+0.0278 
+)
+sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 9 × 3</caption>
+<caption>A data.frame: 9 × 5</caption>
 <thead>
-	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td> 1</td><td>21</td><td>0.13815789</td></tr>
-	<tr><td> 2</td><td>19</td><td>0.12500000</td></tr>
-	<tr><td> 3</td><td>20</td><td>0.13157895</td></tr>
-	<tr><td> 4</td><td>23</td><td>0.15131579</td></tr>
-	<tr><td> 5</td><td>20</td><td>0.13157895</td></tr>
-	<tr><td> 6</td><td>22</td><td>0.14473684</td></tr>
-	<tr><td> 9</td><td>17</td><td>0.11184211</td></tr>
-	<tr><td>10</td><td> 8</td><td>0.05263158</td></tr>
-	<tr><td>11</td><td> 2</td><td>0.01315789</td></tr>
+	<tr><td> 1</td><td>21</td><td>0.13815789</td><td>0.1464</td><td>-0.0082</td></tr>
+	<tr><td> 2</td><td>19</td><td>0.12500000</td><td>0.1132</td><td> 0.0118</td></tr>
+	<tr><td> 3</td><td>20</td><td>0.13157895</td><td>0.1251</td><td> 0.0065</td></tr>
+	<tr><td> 4</td><td>23</td><td>0.15131579</td><td>0.1115</td><td> 0.0398</td></tr>
+	<tr><td> 5</td><td>20</td><td>0.13157895</td><td>0.1452</td><td>-0.0136</td></tr>
+	<tr><td> 6</td><td>22</td><td>0.14473684</td><td>0.1615</td><td>-0.0168</td></tr>
+	<tr><td> 9</td><td>17</td><td>0.11184211</td><td>0.0967</td><td> 0.0151</td></tr>
+	<tr><td>10</td><td> 8</td><td>0.05263158</td><td>0.0607</td><td>-0.0081</td></tr>
+	<tr><td>11</td><td> 2</td><td>0.01315789</td><td>0.0278</td><td>-0.0146</td></tr>
 </tbody>
 </table>
 
 
+
+在非管院的學院分布中，<br/>
+跟母體的非管院學院分布差異不超過四個百分點，讚
 
 #### 此樣本年級分布
 
 
 ```R
-sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.350374987,
+0.32850956,
+0.321115454
+)
+sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 3 × 3</caption>
+<caption>A data.frame: 3 × 5</caption>
 <thead>
-	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>2</td><td>51</td><td>0.3355263</td></tr>
-	<tr><td>3</td><td>54</td><td>0.3552632</td></tr>
-	<tr><td>4</td><td>47</td><td>0.3092105</td></tr>
+	<tr><td>2</td><td>51</td><td>0.3355263</td><td>0.3503750</td><td>-0.0148</td></tr>
+	<tr><td>3</td><td>54</td><td>0.3552632</td><td>0.3285096</td><td> 0.0268</td></tr>
+	<tr><td>4</td><td>47</td><td>0.3092105</td><td>0.3211155</td><td>-0.0119</td></tr>
 </tbody>
 </table>
 
 
+
+在性別分布上，<br/>
+更是不超過三個百分點，<br/>
+能驗證我們在非管院大二到大四的學生的抽樣有一定的代表性
 
 ## 樣本三：台大男性學生
 
@@ -275,79 +320,75 @@ sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
 sample <- data %>% filter(gender == 1)
 ```
 
-#### 此樣本性別分布
-
-
-```R
-sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
-```
-
-
-<table>
-<caption>A tibble: 1 × 3</caption>
-<thead>
-	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
-</thead>
-<tbody>
-	<tr><td>1</td><td>95</td><td>1</td></tr>
-</tbody>
-</table>
-
-
-
 #### 此樣本學院分布
 
 
 ```R
-sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.070760138,
+0.122639961,
+0.084715154,
+0.095550813,
+0.181579379,
+0.137251683,
+0.106879002,
+0.129699557,
+0.04071581,
+0.023313085
+)
+sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 10 × 3</caption>
+<caption>A data.frame: 10 × 5</caption>
 <thead>
-	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td> 1</td><td> 6</td><td>0.06315789</td></tr>
-	<tr><td> 2</td><td>11</td><td>0.11578947</td></tr>
-	<tr><td> 3</td><td>10</td><td>0.10526316</td></tr>
-	<tr><td> 4</td><td>10</td><td>0.10526316</td></tr>
-	<tr><td> 5</td><td>14</td><td>0.14736842</td></tr>
-	<tr><td> 6</td><td>11</td><td>0.11578947</td></tr>
-	<tr><td> 7</td><td>14</td><td>0.14736842</td></tr>
-	<tr><td> 9</td><td>14</td><td>0.14736842</td></tr>
-	<tr><td>10</td><td> 3</td><td>0.03157895</td></tr>
-	<tr><td>11</td><td> 2</td><td>0.02105263</td></tr>
+	<tr><td> 1</td><td> 6</td><td>0.06315789</td><td>0.07076014</td><td>-0.0076</td></tr>
+	<tr><td> 2</td><td>11</td><td>0.11578947</td><td>0.12263996</td><td>-0.0069</td></tr>
+	<tr><td> 3</td><td>10</td><td>0.10526316</td><td>0.08471515</td><td> 0.0205</td></tr>
+	<tr><td> 4</td><td>10</td><td>0.10526316</td><td>0.09555081</td><td> 0.0097</td></tr>
+	<tr><td> 5</td><td>14</td><td>0.14736842</td><td>0.18157938</td><td>-0.0342</td></tr>
+	<tr><td> 6</td><td>11</td><td>0.11578947</td><td>0.13725168</td><td>-0.0215</td></tr>
+	<tr><td> 7</td><td>14</td><td>0.14736842</td><td>0.10687900</td><td> 0.0405</td></tr>
+	<tr><td> 9</td><td>14</td><td>0.14736842</td><td>0.12969956</td><td> 0.0177</td></tr>
+	<tr><td>10</td><td> 3</td><td>0.03157895</td><td>0.04071581</td><td>-0.0091</td></tr>
+	<tr><td>11</td><td> 2</td><td>0.02105263</td><td>0.02331309</td><td>-0.0023</td></tr>
 </tbody>
 </table>
 
 
+
+台大大二到大四男性的學院分布約在四個百分點以下
 
 #### 此樣本年級分布
 
 
 ```R
-sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.350517156,0.330159251,0.319323592
+)
+sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 3 × 3</caption>
+<caption>A data.frame: 3 × 5</caption>
 <thead>
-	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>2</td><td>36</td><td>0.3789474</td></tr>
-	<tr><td>3</td><td>30</td><td>0.3157895</td></tr>
-	<tr><td>4</td><td>29</td><td>0.3052632</td></tr>
+	<tr><td>2</td><td>36</td><td>0.3789474</td><td>0.3505172</td><td> 0.0284</td></tr>
+	<tr><td>3</td><td>30</td><td>0.3157895</td><td>0.3301593</td><td>-0.0144</td></tr>
+	<tr><td>4</td><td>29</td><td>0.3052632</td><td>0.3193236</td><td>-0.0141</td></tr>
 </tbody>
 </table>
 
 
+
+台大大二到大四男性在年級分布更在三個百分點以下
 
 ## 樣本四：台大女性學生
 
@@ -356,78 +397,78 @@ sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
 sample <- data %>% filter(gender == 2)
 ```
 
-#### 此樣本性別分布
-
-
-```R
-sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
-```
-
-
-<table>
-<caption>A tibble: 1 × 3</caption>
-<thead>
-	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
-</thead>
-<tbody>
-	<tr><td>2</td><td>92</td><td>1</td></tr>
-</tbody>
-</table>
-
-
-
 #### 此樣本學院分布
 
 
 ```R
-sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.198585985,
+0.067581618,
+0.138906218,
+0.09856519,
+0.055936785,
+0.144104803,
+0.16261177,
+0.02599293,
+0.067997505,
+0.025161156
+)
+sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% rbind(c(11, 0, 0))  %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 9 × 3</caption>
+<caption>A data.frame: 10 × 5</caption>
 <thead>
-	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td> 1</td><td>15</td><td>0.16304348</td></tr>
-	<tr><td> 2</td><td> 8</td><td>0.08695652</td></tr>
-	<tr><td> 3</td><td>10</td><td>0.10869565</td></tr>
-	<tr><td> 4</td><td>13</td><td>0.14130435</td></tr>
-	<tr><td> 5</td><td> 6</td><td>0.06521739</td></tr>
-	<tr><td> 6</td><td>11</td><td>0.11956522</td></tr>
-	<tr><td> 7</td><td>21</td><td>0.22826087</td></tr>
-	<tr><td> 9</td><td> 3</td><td>0.03260870</td></tr>
-	<tr><td>10</td><td> 5</td><td>0.05434783</td></tr>
+	<tr><td> 1</td><td>15</td><td>0.16304348</td><td>0.19858598</td><td>-0.0355</td></tr>
+	<tr><td> 2</td><td> 8</td><td>0.08695652</td><td>0.06758162</td><td> 0.0194</td></tr>
+	<tr><td> 3</td><td>10</td><td>0.10869565</td><td>0.13890622</td><td>-0.0302</td></tr>
+	<tr><td> 4</td><td>13</td><td>0.14130435</td><td>0.09856519</td><td> 0.0427</td></tr>
+	<tr><td> 5</td><td> 6</td><td>0.06521739</td><td>0.05593679</td><td> 0.0093</td></tr>
+	<tr><td> 6</td><td>11</td><td>0.11956522</td><td>0.14410480</td><td>-0.0245</td></tr>
+	<tr><td> 7</td><td>21</td><td>0.22826087</td><td>0.16261177</td><td> 0.0656</td></tr>
+	<tr><td> 9</td><td> 3</td><td>0.03260870</td><td>0.02599293</td><td> 0.0066</td></tr>
+	<tr><td>10</td><td> 5</td><td>0.05434783</td><td>0.06799750</td><td>-0.0136</td></tr>
+	<tr><td>11</td><td> 0</td><td>0.00000000</td><td>0.02516116</td><td>-0.0252</td></tr>
 </tbody>
 </table>
 
 
+
+台大大二到大四女學生<br/>
+在學院分布中，管院的比例偏高(6.5%)<br/>
+因此樣本會稍微受管院學生影響而較無整體代表性
 
 #### 此樣本年級分布
 
 
 ```R
-sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.346849657,0.328966521,0.324183822
+)
+sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))  %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 3 × 3</caption>
+<caption>A data.frame: 3 × 5</caption>
 <thead>
-	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>2</td><td>27</td><td>0.2934783</td></tr>
-	<tr><td>3</td><td>40</td><td>0.4347826</td></tr>
-	<tr><td>4</td><td>25</td><td>0.2717391</td></tr>
+	<tr><td>2</td><td>27</td><td>0.2934783</td><td>0.3468497</td><td>-0.0534</td></tr>
+	<tr><td>3</td><td>40</td><td>0.4347826</td><td>0.3289665</td><td> 0.1058</td></tr>
+	<tr><td>4</td><td>25</td><td>0.2717391</td><td>0.3241838</td><td>-0.0524</td></tr>
 </tbody>
 </table>
 
 
+
+在年級分布的部分，大三學生的比例明顯高於大二與大四<br/>
+因此此樣本容易受大三學生影響而較無整體代表性
 
 ## 樣本五：台大大二學生
 
@@ -440,74 +481,73 @@ sample <- data %>% filter(grade == 2)
 
 
 ```R
-sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.561398896,0.438601104
+)
+sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 2 × 3</caption>
+<caption>A data.frame: 2 × 5</caption>
 <thead>
-	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>1</td><td>36</td><td>0.5714286</td></tr>
-	<tr><td>2</td><td>27</td><td>0.4285714</td></tr>
+	<tr><td>1</td><td>36</td><td>0.5714286</td><td>0.5613989</td><td> 0.01</td></tr>
+	<tr><td>2</td><td>27</td><td>0.4285714</td><td>0.4386011</td><td>-0.01</td></tr>
 </tbody>
 </table>
 
 
+
+樣本中的大二學生，<br/>
+在性別的分布上僅有一個百分點之差
 
 #### 此樣本學院分布
 
 
 ```R
-sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.127267946,
+0.096239811,
+0.109387326,
+0.101761767,
+0.123849592,
+0.147252169,
+0.127793847,
+0.083092296,
+0.05232711,
+0.019984223
+)
+sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 10 × 3</caption>
+<caption>A data.frame: 10 × 5</caption>
 <thead>
-	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td> 1</td><td> 7</td><td>0.11111111</td></tr>
-	<tr><td> 2</td><td> 5</td><td>0.07936508</td></tr>
-	<tr><td> 3</td><td> 8</td><td>0.12698413</td></tr>
-	<tr><td> 4</td><td> 6</td><td>0.09523810</td></tr>
-	<tr><td> 5</td><td> 5</td><td>0.07936508</td></tr>
-	<tr><td> 6</td><td> 6</td><td>0.09523810</td></tr>
-	<tr><td> 7</td><td>12</td><td>0.19047619</td></tr>
-	<tr><td> 9</td><td> 9</td><td>0.14285714</td></tr>
-	<tr><td>10</td><td> 4</td><td>0.06349206</td></tr>
-	<tr><td>11</td><td> 1</td><td>0.01587302</td></tr>
+	<tr><td> 1</td><td> 7</td><td>0.11111111</td><td>0.12726795</td><td>-0.0162</td></tr>
+	<tr><td> 2</td><td> 5</td><td>0.07936508</td><td>0.09623981</td><td>-0.0169</td></tr>
+	<tr><td> 3</td><td> 8</td><td>0.12698413</td><td>0.10938733</td><td> 0.0176</td></tr>
+	<tr><td> 4</td><td> 6</td><td>0.09523810</td><td>0.10176177</td><td>-0.0065</td></tr>
+	<tr><td> 5</td><td> 5</td><td>0.07936508</td><td>0.12384959</td><td>-0.0445</td></tr>
+	<tr><td> 6</td><td> 6</td><td>0.09523810</td><td>0.14725217</td><td>-0.0520</td></tr>
+	<tr><td> 7</td><td>12</td><td>0.19047619</td><td>0.12779385</td><td> 0.0627</td></tr>
+	<tr><td> 9</td><td> 9</td><td>0.14285714</td><td>0.08309230</td><td> 0.0598</td></tr>
+	<tr><td>10</td><td> 4</td><td>0.06349206</td><td>0.05232711</td><td> 0.0112</td></tr>
+	<tr><td>11</td><td> 1</td><td>0.01587302</td><td>0.01998422</td><td>-0.0041</td></tr>
 </tbody>
 </table>
 
 
 
-#### 此樣本年級分布
-
-
-```R
-sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
-```
-
-
-<table>
-<caption>A tibble: 1 × 3</caption>
-<thead>
-	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
-</thead>
-<tbody>
-	<tr><td>2</td><td>63</td><td>1</td></tr>
-</tbody>
-</table>
-
-
+樣本中大二學生在管院、電資學院分布較多(6.27%, 5.98%)<br/>
+生農學院分布較少(5.2%)<br/>
+以學院分布來看代表性略為不足
 
 ## 樣本六：台大大三學生
 
@@ -520,74 +560,76 @@ sample <- data %>% filter(grade == 3)
 
 
 ```R
-sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.559699416,0.440300584
+
+)
+sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 2 × 3</caption>
+<caption>A data.frame: 2 × 5</caption>
 <thead>
-	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>1</td><td>30</td><td>0.4285714</td></tr>
-	<tr><td>2</td><td>40</td><td>0.5714286</td></tr>
+	<tr><td>1</td><td>30</td><td>0.4285714</td><td>0.5596994</td><td>-0.1311</td></tr>
+	<tr><td>2</td><td>40</td><td>0.5714286</td><td>0.4403006</td><td> 0.1311</td></tr>
 </tbody>
 </table>
 
 
+
+樣本中的大三學生，<br/>
+是此次抽樣中偏差最為嚴重的一群，<br/>
+尤其在性別分布上<br/>
+出現了高達13%的差距
 
 #### 此樣本學院分布
 
 
 ```R
-sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.123573615,
+0.096576677,
+0.108266073,
+0.094350125,
+0.130809908,
+0.136654606,
+0.134428055,
+0.085722238,
+0.054550515,
+0.025883663
+)
+sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 10 × 3</caption>
+<caption>A data.frame: 10 × 5</caption>
 <thead>
-	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td> 1</td><td> 8</td><td>0.11428571</td></tr>
-	<tr><td> 2</td><td> 7</td><td>0.10000000</td></tr>
-	<tr><td> 3</td><td> 7</td><td>0.10000000</td></tr>
-	<tr><td> 4</td><td>12</td><td>0.17142857</td></tr>
-	<tr><td> 5</td><td> 4</td><td>0.05714286</td></tr>
-	<tr><td> 6</td><td> 8</td><td>0.11428571</td></tr>
-	<tr><td> 7</td><td>16</td><td>0.22857143</td></tr>
-	<tr><td> 9</td><td> 4</td><td>0.05714286</td></tr>
-	<tr><td>10</td><td> 3</td><td>0.04285714</td></tr>
-	<tr><td>11</td><td> 1</td><td>0.01428571</td></tr>
+	<tr><td> 1</td><td> 8</td><td>0.11428571</td><td>0.12357361</td><td>-0.0093</td></tr>
+	<tr><td> 2</td><td> 7</td><td>0.10000000</td><td>0.09657668</td><td> 0.0034</td></tr>
+	<tr><td> 3</td><td> 7</td><td>0.10000000</td><td>0.10826607</td><td>-0.0083</td></tr>
+	<tr><td> 4</td><td>12</td><td>0.17142857</td><td>0.09435013</td><td> 0.0771</td></tr>
+	<tr><td> 5</td><td> 4</td><td>0.05714286</td><td>0.13080991</td><td>-0.0737</td></tr>
+	<tr><td> 6</td><td> 8</td><td>0.11428571</td><td>0.13665461</td><td>-0.0224</td></tr>
+	<tr><td> 7</td><td>16</td><td>0.22857143</td><td>0.13442805</td><td> 0.0941</td></tr>
+	<tr><td> 9</td><td> 4</td><td>0.05714286</td><td>0.08572224</td><td>-0.0286</td></tr>
+	<tr><td>10</td><td> 3</td><td>0.04285714</td><td>0.05455052</td><td>-0.0117</td></tr>
+	<tr><td>11</td><td> 1</td><td>0.01428571</td><td>0.02588366</td><td>-0.0116</td></tr>
 </tbody>
 </table>
 
 
 
-#### 此樣本年級分布
-
-
-```R
-sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
-```
-
-
-<table>
-<caption>A tibble: 1 × 3</caption>
-<thead>
-	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
-</thead>
-<tbody>
-	<tr><td>3</td><td>70</td><td>1</td></tr>
-</tbody>
-</table>
-
-
+在學院分布上，<br/>
+醫學院、管院、工學院的差距也較大(7.71%, 9.41%, -7.37%)<br/>
+造成在大三學生這個母體中的代表性不足
 
 ## 樣本七：台大大四學生
 
@@ -600,70 +642,70 @@ sample <- data %>% filter(grade == 4)
 
 
 ```R
-sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.555079909,0.444920091
+
+
+)
+sample %>% group_by(gender) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 2 × 3</caption>
+<caption>A data.frame: 2 × 5</caption>
 <thead>
-	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>gender</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td>1</td><td>29</td><td>0.537037</td></tr>
-	<tr><td>2</td><td>25</td><td>0.462963</td></tr>
+	<tr><td>1</td><td>29</td><td>0.537037</td><td>0.5550799</td><td>-0.018</td></tr>
+	<tr><td>2</td><td>25</td><td>0.462963</td><td>0.4449201</td><td> 0.018</td></tr>
 </tbody>
 </table>
 
 
+
+樣本中大四學生的性別分布差距母體不到兩個百分點
 
 #### 此樣本學院分布
 
 
 ```R
-sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
+actualP <- c(0.130707763,
+0.102454338,
+0.1081621,
+0.094178082,
+0.123858447,
+0.136415525,
+0.132420091,
+0.083047945,
+0.051369863,
+0.026826484
+)
+sample %>% group_by(school) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample)) %>% rbind(c(11, 0, 0))%>% cbind(actualP) %>% mutate(difference = round(p - actualP, 4))
 ```
 
 
 <table>
-<caption>A tibble: 9 × 3</caption>
+<caption>A data.frame: 10 × 5</caption>
 <thead>
-	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
+	<tr><th scope=col>school</th><th scope=col>n</th><th scope=col>p</th><th scope=col>actualP</th><th scope=col>difference</th></tr>
+	<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
 </thead>
 <tbody>
-	<tr><td> 1</td><td> 6</td><td>0.11111111</td></tr>
-	<tr><td> 2</td><td> 7</td><td>0.12962963</td></tr>
-	<tr><td> 3</td><td> 5</td><td>0.09259259</td></tr>
-	<tr><td> 4</td><td> 5</td><td>0.09259259</td></tr>
-	<tr><td> 5</td><td>11</td><td>0.20370370</td></tr>
-	<tr><td> 6</td><td> 8</td><td>0.14814815</td></tr>
-	<tr><td> 7</td><td> 7</td><td>0.12962963</td></tr>
-	<tr><td> 9</td><td> 4</td><td>0.07407407</td></tr>
-	<tr><td>10</td><td> 1</td><td>0.01851852</td></tr>
+	<tr><td> 1</td><td> 6</td><td>0.11111111</td><td>0.13070776</td><td>-0.0196</td></tr>
+	<tr><td> 2</td><td> 7</td><td>0.12962963</td><td>0.10245434</td><td> 0.0272</td></tr>
+	<tr><td> 3</td><td> 5</td><td>0.09259259</td><td>0.10816210</td><td>-0.0156</td></tr>
+	<tr><td> 4</td><td> 5</td><td>0.09259259</td><td>0.09417808</td><td>-0.0016</td></tr>
+	<tr><td> 5</td><td>11</td><td>0.20370370</td><td>0.12385845</td><td> 0.0798</td></tr>
+	<tr><td> 6</td><td> 8</td><td>0.14814815</td><td>0.13641553</td><td> 0.0117</td></tr>
+	<tr><td> 7</td><td> 7</td><td>0.12962963</td><td>0.13242009</td><td>-0.0028</td></tr>
+	<tr><td> 9</td><td> 4</td><td>0.07407407</td><td>0.08304794</td><td>-0.0090</td></tr>
+	<tr><td>10</td><td> 1</td><td>0.01851852</td><td>0.05136986</td><td>-0.0329</td></tr>
+	<tr><td>11</td><td> 0</td><td>0.00000000</td><td>0.02682648</td><td>-0.0268</td></tr>
 </tbody>
 </table>
 
 
 
-#### 此樣本年級分布
-
-
-```R
-sample %>% group_by(grade) %>% summarise(n=n()) %>% mutate(p = n / nrow(sample))
-```
-
-
-<table>
-<caption>A tibble: 1 × 3</caption>
-<thead>
-	<tr><th scope=col>grade</th><th scope=col>n</th><th scope=col>p</th></tr>
-	<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>
-</thead>
-<tbody>
-	<tr><td>4</td><td>54</td><td>1</td></tr>
-</tbody>
-</table>
-
-
+此樣本在工學院的分布較高(7.98%)<br/>
+有一定程度會影響樣本的代表性
